2002-02-22  Ian Lance Taylor  <ian@airs.com>

	* unix/serial.c (fsserial_lockfile): In HAVE_SCO_LOCKFILES case,
	only lower case the last letter in the lock file name.
	* uucp.texi (UUCP Lock Files): Document this change.

	* unix/serial.c (fsblock): Test for EINVAL when changing the write
	descriptor as we do when changing the read descriptor.

	* unix/seq.c (ixsysdep_get_sequence): If SPOOLDIR_HDB or
	SPOOLDIR_SVR4, use .SQFILE for the name of the sequence directory,
	to avoid colliding with the command sequence number file used by
	fscmd_seq.  It's not compatible at the file level, but it might
	work.

	* uucico.c (fspawn_uuxqt): Ignore the zsys parameter.

	* Godfrey van der Linden: unix/serial.c (fsysdep_conn_io): Limit
	the delay waiting for a write to the number of bytes we are
	prepared to read.

2002-02-17  Ian Lance Taylor  <ian@airs.com>

	* unix/serial.c (fsysdep_conn_io): If FD_ZERO is defined, use
	fd_set for the select argument.

	* Don Phillips: uustat.c (fsquery_show): Add space in the 0X case
	to make everything line up.
	* unix/status.c (fsysdep_get_status): Correct removal of trailing
	quote.

	* unix/serial.c (fsserial_open): Make sure that we can not set the
	ibaud field to zero for a terminal.
	(fsysdep_conn_io): Only use baud rate in delay calculations on a
	terminal.

2002-02-16  Ian Lance Taylor  <ian@airs.com>

	* configure.in: When checking for <sys/select.h>, only include
	<sys/time.h> if it exists.
	* configure: Rebuild.

	Raymond Nijssen: Support for hardware flow control on HP/UX.
	* unix/serial.c: Include <sys/termiox.h> if the system has it.
	(fsserial_hardflow): If HAVE_SYS_TERMIOX_H, use TCGETX/TCSETX to
	enable and disable hardware flow control.
	* configure.in: Check for existence of <sys/termiox.h>.
	* configure, config.h.in: Rebuild.

	* uucp.c (main): Check for unsupported whitespace in notification
	address.
	* uux.c (main): Likewise.

	* unix/splcmd.c (zsysdep_spool_commands): Check for unsupported
	use of white space.
